--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -1,13 +1,29 @@
-CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=4
+# gains
+CONFIG_CEREBRI_RDD2_ROLL_KP = 0
+CONFIG_CEREBRI_RDD2_PITCH_KP = 0
+CONFIG_CEREBRI_RDD2_YAW_KP = 0
 
-CONFIG_ASSERT=n
+CONFIG_CEREBRI_RDD2_ROLLRATE_KP = 300
+CONFIG_CEREBRI_RDD2_PITCHRATE_KP = 300
+CONFIG_CEREBRI_RDD2_YAWRATE_KP = 300
 
-CONFIG_INPUT=y
-CONFIG_INPUT_EVENT_DUMP=n
-CONFIG_INPUT_SHELL=n
-CONFIG_INPUT_MODE_SYNCHRONOUS=y
-CONFIG_INPUT_SBUS_REPORT_FILTER=0
-#CONFIG_INPUT_THREAD_STACK_SIZE=2048
+CONFIG_CEREBRI_RDD2_ROLLRATE_KI = 0
+CONFIG_CEREBRI_RDD2_PITCHRATE_KI = 0
+CONFIG_CEREBRI_RDD2_YAWRATE_KI = 0
+
+CONFIG_CEREBRI_RDD2_ROLLRATE_IMAX = 0
+CONFIG_CEREBRI_RDD2_PITCHRATE_IMAX = 0
+CONFIG_CEREBRI_RDD2_YAWRATE_IMAX = 0
+
+# RDD2 APPS
+CONFIG_CEREBRI_RDD2_ALLOCATION=y
+CONFIG_CEREBRI_RDD2_ANGULAR_VELOCITY=y
+CONFIG_CEREBRI_RDD2_ATTITUDE=n
+CONFIG_CEREBRI_RDD2_COMMAND=y
+CONFIG_CEREBRI_RDD2_ESTIMATE=y
+CONFIG_CEREBRI_RDD2_FSM=y
+CONFIG_CEREBRI_RDD2_LIGHTING=n
+CONFIG_CEREBRI_RDD2_POSITION=n
 
 # disabled for first live flight
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=n
@@ -15,14 +31,16 @@ CONFIG_CEREBRI_ACTUATE_PWM=y
 CONFIG_CEREBRI_ACTUATE_PWM_SHELL=y
 CONFIG_CEREBRI_ACTUATE_SOUND=n
 
-CONFIG_CEREBRI_RDD2_ALLOCATION=y
-CONFIG_CEREBRI_RDD2_ANGULAR_VELOCITY=y
-CONFIG_CEREBRI_RDD2_ATTITUDE=y
-CONFIG_CEREBRI_RDD2_COMMAND=y
-CONFIG_CEREBRI_RDD2_ESTIMATE=y
-CONFIG_CEREBRI_RDD2_FSM=y
-CONFIG_CEREBRI_RDD2_LIGHTING=n
-CONFIG_CEREBRI_RDD2_POSITION=n
+# config
+CONFIG_INPUT=y
+CONFIG_INPUT_EVENT_DUMP=n
+CONFIG_INPUT_SHELL=n
+sONFIG_INPUT_MODE_SYNCHRONOUS=y
+CONFIG_INPUT_SBUS_REPORT_FILTER=0
+#CONFIG_INPUT_THREAD_STACK_SIZE=2048
+
+CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=4
+CONFIG_ASSERT=n
 
 CONFIG_CEREBRI_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_MAG=n
@@ -39,9 +57,6 @@ CONFIG_APA102_STRIP=y
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=y
 CONFIG_CEREBRI_SENSE_MAG_COUNT=2
 CONFIG_CEREBRI_SENSE_POWER=y
-CONFIG_CEREBRI_RDD2_MOTOR_L_MM=100
-CONFIG_CEREBRI_RDD2_MOTOR_CM=16000
-CONFIG_CEREBRI_RDD2_MOTOR_CT=8549
 
 # ARM0
 CONFIG_CEREBRI_ACTUATE_PWM_INDEX_0=0
