--- a/app/rdd2/boards/native_sim.conf
+++ b/app/rdd2/boards/native_sim.conf
@@ -1,3 +1,24 @@
+# gains
+CONFIG_CEREBRI_RDD2_THRUST_TRIM=0
+CONFIG_CEREBRI_RDD2_THRUST_DELTA=0
+
+CONFIG_CEREBRI_RDD2_ROLL_KP=0
+CONFIG_CEREBRI_RDD2_PITCH_KP=0
+CONFIG_CEREBRI_RDD2_YAW_KP=0
+
+CONFIG_CEREBRI_RDD2_ROLLRATE_KP=300
+CONFIG_CEREBRI_RDD2_PITCHRATE_KP=300
+CONFIG_CEREBRI_RDD2_YAWRATE_KP=300
+
+CONFIG_CEREBRI_RDD2_ROLLRATE_KI=0
+CONFIG_CEREBRI_RDD2_PITCHRATE_KI=0
+CONFIG_CEREBRI_RDD2_YAWRATE_KI=0
+
+CONFIG_CEREBRI_RDD2_ROLLRATE_IMAX=0
+CONFIG_CEREBRI_RDD2_PITCHRATE_IMAX=0
+CONFIG_CEREBRI_RDD2_YAWRATE_IMAX=0
+
+# config
 CONFIG_ETH_NATIVE_POSIX=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=500
