Change to speed optimizations.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -1,3 +1,6 @@
+CONFIG_SPEED_OPTIMIZATIONS=y
+CONFIG_SIZE_OPTIMIZATIONS=n
+
 # gains
 CONFIG_CEREBRI_RDD2_THRUST_TRIM=0
 CONFIG_CEREBRI_RDD2_THRUST_DELTA=0
