Add external odom config.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/rdd2/Kconfig
+++ b/app/rdd2/Kconfig
@@ -56,6 +56,12 @@ config CEREBRI_RDD2_CASADI
   help
     Enable Casadi generated code
 
+config CEREBRI_RDD2_ESTIMATE_EXTERNAL_ODOM
+  bool "fuse external odometry"
+  depends on CEREBRI_RDD2_ESTIMATE
+  help
+    Enable external odometry
+
 config CEREBRI_RDD2_BATTERY_NCELLS
   int "number of cells in battery"
   default 4
