--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -30,6 +30,8 @@ CONFIG_CEREBRI_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_UBX_GNSS=y
 
+CONFIG_CEREBRI_RDD2_ESTIMATE_EXTERNAL_ODOM=y
+
 CONFIG_CEREBRI_SYNAPSE_ETH_RX=y
 CONFIG_CEREBRI_SYNAPSE_ETH_TX=y
 CONFIG_CEREBRI_SYNAPSE_ETHERNET=n
