Enable fpu for b3rb and rdd2.
Signed-off-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/b3rb/boards/mr_canhubk3_s32k344.conf
+++ b/app/b3rb/boards/mr_canhubk3_s32k344.conf
@@ -1,5 +1,8 @@
 CONFIG_ENTROPY_GENERATOR=y
 CONFIG_TEST_RANDOM_GENERATOR=y
+CONFIG_ASSERT=n
+
+CONFIG_FPU=y
 
 CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=3
 CONFIG_LED_STRIP=y
