--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -1,5 +1,8 @@
 CONFIG_SPEED_OPTIMIZATIONS=y
 CONFIG_SIZE_OPTIMIZATIONS=n
+CONFIG_ASSERT=n
+
+CONFIG_FPU=y
 
 # gains
 CONFIG_CEREBRI_RDD2_THRUST_TRIM=21952
@@ -47,7 +50,6 @@ CONFIG_INPUT_SBUS_REPORT_FILTER=0
 #CONFIG_INPUT_THREAD_STACK_SIZE=2048
 
 CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=4
-CONFIG_ASSERT=n
 
 CONFIG_CEREBRI_SENSE_JOY=y
 CONFIG_CEREBRI_SENSE_IMU=y
