--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -1,6 +1,20 @@
 CONFIG_SPEED_OPTIMIZATIONS=y
 CONFIG_SIZE_OPTIMIZATIONS=n
-CONFIG_ASSERT=n
+
+CONFIG_TEST=y
+CONFIG_ASAN=y
+CONFIG_UBSAN=n
+CONFIG_ASSERT=y
+CONFIG_ASSERT_LEVEL=2
+CONFIG_ASSERT_VERBOSE=y
+
+
+CONFIG_STACK_CANARIES=y
+
+CONFIG_ISR_STACK_SIZE=32768
+
+CONFIG_LOG_MODE_DEFERRED=n
+CONFIG_LOG_MODE_IMMEDIATE=y
 
 CONFIG_FPU=y
 
@@ -42,16 +56,16 @@ CONFIG_CEREBRI_ACTUATE_SOUND=y
 
 # config
 CONFIG_INPUT=y
-CONFIG_INPUT_SBUS_THREAD_STACK_SIZE=2048
+CONFIG_INPUT_SBUS_THREAD_STACK_SIZE=8192
 CONFIG_INPUT_EVENT_DUMP=n
 CONFIG_INPUT_SHELL=n
-CONFIG_INPUT_MODE_SYNCHRONOUS=y
+CONFIG_INPUT_MODE_SYNCHRONOUS=n
 CONFIG_INPUT_SBUS_REPORT_FILTER=0
-#CONFIG_INPUT_THREAD_STACK_SIZE=2048
+CONFIG_INPUT_THREAD_STACK_SIZE=2048
 
 CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=4
 
-CONFIG_CEREBRI_SENSE_JOY=y
+CONFIG_CEREBRI_SENSE_INPUT=y
 CONFIG_CEREBRI_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_SAFETY=y
