--- a/lib/sense/CMakeLists.txt
+++ b/lib/sense/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_BARO baro)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_IMU imu)
-add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_JOY joy)
+add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_INPUT input)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_MAG mag)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_POWER power)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_SAFETY safety)
