--- a/west.yml
+++ b/west.yml
@@ -36,11 +36,11 @@ manifest:
       path: modules/lib/zros
     - name: synapse_tinyframe
       remote: cognipilot
-      revision: 672c6d30d5e8cc24f720edd3b915889dc0bc5fab # main 12/9/23
+      revision: 8519bc691293b85ad7073aae50eb3f17b5eacffc # pr-input 6/11/24
       path: modules/lib/synapse_tinyframe
     - name: synapse_protobuf
       remote: cognipilot
-      revision: ad5fe4b4682dfc820096946c145eae9af2397ab4 # main 06/09/24
+      revision: 6a2554e862e285b8fe0194ca1e78918168de05bf # pr-input 6/11/24
       path: modules/lib/synapse_protobuf
     - name: ubxlib
       remote: cognipilot
