Work on input mapping.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/b3rb/CMakeLists.txt
+++ b/app/b3rb/CMakeLists.txt
@@ -16,7 +16,10 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(b3rb LANGUAGES C)
 
-set(SOURCE_FILES src/boot_banner.c)
+set(SOURCE_FILES
+  src/boot_banner.c
+  src/input_mapping.c
+  )
 
 if (CONFIG_CEREBRI_B3RB_FSM)
   list(APPEND SOURCE_FILES src/fsm.c)
