--- a/lib/sense/Kconfig
+++ b/lib/sense/Kconfig
@@ -5,10 +5,10 @@ menu "Sense"
 
 rsource "baro/Kconfig"
 rsource "imu/Kconfig"
-rsource "input/Kconfig"
 rsource "mag/Kconfig"
 rsource "power/Kconfig"
 rsource "safety/Kconfig"
+rsource "sbus/Kconfig"
 rsource "ubx_gnss/Kconfig"
 rsource "vesc_can_status/Kconfig"
 rsource "wheel_odometry/Kconfig"
