--- a/app/b3rb/boards/mr_canhubk3_s32k344.conf
+++ b/app/b3rb/boards/mr_canhubk3_s32k344.conf
@@ -1,12 +1,54 @@
 CONFIG_ENTROPY_GENERATOR=y
 CONFIG_TEST_RANDOM_GENERATOR=y
-CONFIG_ASSERT=n
+CONFIG_SPEED_OPTIMIZATIONS=y
+CONFIG_SIZE_OPTIMIZATIONS=n
+
+CONFIG_TEST=y
+CONFIG_ASAN=y
+CONFIG_UBSAN=n
+CONFIG_ASSERT=y
+CONFIG_ASSERT_LEVEL=2
+CONFIG_ASSERT_VERBOSE=y
+
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+
+CONFIG_STACK_CANARIES=y
+
+CONFIG_ISR_STACK_SIZE=2048
+
+CONFIG_LOG_MODE_DEFERRED=n
+CONFIG_LOG_MODE_IMMEDIATE=y
 
 CONFIG_FPU=y
 
+# config
+CONFIG_INPUT=y
+CONFIG_INPUT_SBUS_THREAD_STACK_SIZE=8192
+CONFIG_INPUT_EVENT_DUMP=y
+CONFIG_INPUT_SHELL=y
+CONFIG_INPUT_MODE_SYNCHRONOUS=n
+CONFIG_INPUT_SBUS_REPORT_FILTER=0
+CONFIG_INPUT_THREAD_STACK_SIZE=2048
+
 CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=3
+
+CONFIG_CEREBRI_SENSE_INPUT=y
+CONFIG_CEREBRI_SENSE_IMU=y
+CONFIG_CEREBRI_SENSE_MAG=y
+CONFIG_CEREBRI_SENSE_SAFETY=y
+CONFIG_CEREBRI_SENSE_UBX_GNSS=y
+
+CONFIG_CEREBRI_SYNAPSE_ETH_RX=y
+CONFIG_CEREBRI_SYNAPSE_ETH_TX=y
+
+CONFIG_PWM=y
+
 CONFIG_LED_STRIP=y
 CONFIG_APA102_STRIP=y
+CONFIG_CEREBRI_ACTUATE_LED_ARRAY=y
+CONFIG_CEREBRI_SENSE_MAG_COUNT=2
+CONFIG_CEREBRI_SENSE_POWER=y
+CONFIG_CEREBRI_ACTUATE_SOUND=y
 
 CONFIG_ETH_NXP_S32_RX_RING_LEN=16
 
@@ -41,8 +83,6 @@ CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MIN_2=0
 CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MAX_2=50000
 CONFIG_CEREBRI_ACTUATE_PWM_PULSE_CENTER_2=0
 
-CONFIG_PWM=y
-
 CONFIG_CAN=y
 CONFIG_CAN_MAX_FILTER=5
 CONFIG_CAN_SHELL=y
@@ -58,6 +98,7 @@ CONFIG_CAN_FD_MODE=y
 CONFIG_SHELL_ARGC_MAX=72
 CONFIG_I2C=y
 CONFIG_SENSOR=y
+CONFIG_SENSOR_SHELL=y
 CONFIG_HEAP_MEM_POOL_SIZE=16384
 
 # Debugging
