--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -80,7 +80,8 @@ CONFIG_NET_STATISTICS=y
 CONFIG_NET_MGMT_EVENT_INFO=y
 CONFIG_NET_MGMT_EVENT_MONITOR=y
 CONFIG_NET_BUF_POOL_USAGE=y
-CONFIG_NET_DEBUG_NET_PKT_ALLOC=y CONFIG_NET_CONFIG_NEED_IPV4=y
+CONFIG_NET_DEBUG_NET_PKT_ALLOC=y
+CONFIG_NET_CONFIG_NEED_IPV4=y
 CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
 CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
 
