--- a/app/b3rb/sample.yaml
+++ b/app/b3rb/sample.yaml
@@ -9,8 +9,8 @@ tests:
       - b3rb
     integration_platforms:
       - native_sim
-#  b3rb.mr_canhubk3/s32k344:
-#    tags:
-#      - b3rb
-#    integration_platforms:
-#      - mr_canhubk3
+  b3rb.mr_canhubk3/s32k344:
+    tags:
+      - b3rb
+    integration_platforms:
+      - mr_canhubk3
