--- a/app/b3rb/boards/native_sim.conf
+++ b/app/b3rb/boards/native_sim.conf
@@ -23,6 +23,7 @@ CONFIG_ASSERT_VERBOSE=y
 
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=n
 CONFIG_CEREBRI_ACTUATE_SOUND=n
+CONFIG_CEREBRI_SENSE_SBUS=n
 CONFIG_CEREBRI_ACTUATE_PWM=n
 CONFIG_CEREBRI_SENSE_POWER=n
 CONFIG_CEREBRI_SENSE_IMU=n
