--- a/app/rdd2/CMakeLists.txt
+++ b/app/rdd2/CMakeLists.txt
@@ -10,6 +10,39 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(rdd2 LANGUAGES C)
 
+set(CYECCA_PYTHON  ${CMAKE_CURRENT_SOURCE_DIR}/../../scripts/cyecca_python)
+
+set(flags
+  -std=c11
+  -Wall
+  -Wextra
+  -Werror
+  -Wstrict-prototypes
+  -Waggregate-return
+  -Wbad-function-cast
+  -Wcast-align
+  -Wcast-qual
+  -Wfloat-equal
+  -Wformat-security
+  -Wlogical-op
+  -Wmissing-declarations
+  # ubxlib includes geographiclib which dir doesn't exist
+  #-Wmissing-include-dirs
+  -Wmissing-prototypes
+  -Wnested-externs
+  -Wpointer-arith
+  -Wredundant-decls
+  -Wsequence-point
+  -Wshadow
+  -Wstrict-prototypes
+  -Wswitch
+  -Wundef
+  -Wunreachable-code
+  -Wunused-but-set-parameter
+  -Wwrite-strings
+  )
+string(JOIN " " flags ${flags})
+
 set(SOURCE_FILES
   src/boot_banner.c
   src/input_mapping.c
@@ -50,51 +83,26 @@ if (CONFIG_CEREBRI_RDD2_ATTITUDE)
     src/attitude.c)
 endif()
 
-if (CONFIG_CEREBRI_RDD2_CASADI)
-  list(APPEND SOURCE_FILES
-    src/casadi/gen/rdd2.c)
-endif()
+set(CASADI_DEST_DIR ${CMAKE_BINARY_DIR}/app/rdd2/casadi)
 
-if (CONFIG_CEREBRI_RDD2_CASADI)
-  list(APPEND SOURCE_FILES
-    src/casadi/gen/rdd2_loglinear.c)
-endif()
-
-if (CONFIG_CEREBRI_RDD2_CASADI)
-  list(APPEND SOURCE_FILES
-    src/casadi/gen/bezier.c)
-endif()
-
-set(flags
-  -std=c11
-  -Wall
-  -Wextra
-  -Werror
-  -Wstrict-prototypes
-  -Waggregate-return
-  -Wbad-function-cast
-  -Wcast-align
-  -Wcast-qual
-  -Wfloat-equal
-  -Wformat-security
-  -Wlogical-op
-  -Wmissing-declarations
-  # ubxlib includes geographiclib which dir doesn't exist
-  #-Wmissing-include-dirs
-  -Wmissing-prototypes
-  -Wnested-externs
-  -Wpointer-arith
-  -Wredundant-decls
-  -Wsequence-point
-  -Wshadow
-  -Wstrict-prototypes
-  -Wswitch
-  -Wundef
-  -Wunreachable-code
-  -Wunused-but-set-parameter
-  -Wwrite-strings
+set(CASADI_FILES
+  ${CASADI_DEST_DIR}/rdd2.c
+  ${CASADI_DEST_DIR}/rdd2_loglinear.c
+  ${CASADI_DEST_DIR}/bezier.c
   )
-string(JOIN " " flags ${flags})
+
+if (CONFIG_CEREBRI_RDD2_CASADI)
+  list(APPEND SOURCE_FILES ${CASADI_FILES})
+endif()
+
+add_custom_command(OUTPUT ${CASADI_DEST_DIR}/rdd2.c
+  COMMAND ${CYECCA_PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/src/casadi/rdd2.py ${CASADI_DEST_DIR})
+
+add_custom_command(OUTPUT ${CASADI_DEST_DIR}/rdd2_loglinear.c
+    COMMAND ${CYECCA_PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/src/casadi/rdd2_loglinear.py ${CASADI_DEST_DIR})
+
+add_custom_command(OUTPUT ${CASADI_DEST_DIR}/bezier.c
+    COMMAND ${CYECCA_PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/src/casadi/bezier.py ${CASADI_DEST_DIR})
 
 set_source_files_properties(
   ${SOURCE_FILES}
@@ -103,9 +111,7 @@ set_source_files_properties(
   )
 
 set_source_files_properties(
-  src/casadi/gen/rdd2.c
-  src/casadi/gen/rdd2_loglinear.c
-  src/casadi/gen/bezier.c
+  ${CASADI_FILES}
   PROPERTIES COMPILE_FLAGS
   "${flags}\
   -Wno-unused-parameter\
@@ -115,6 +121,9 @@ set_source_files_properties(
 
 target_sources(app PRIVATE ${SOURCE_FILES})
 
-target_include_directories(app SYSTEM BEFORE PRIVATE ${ZEPHYR_BASE}/include)
+target_include_directories(app SYSTEM BEFORE PRIVATE
+  ${ZEPHYR_BASE}/include
+  ${CMAKE_BINARY_DIR}
+  )
 
 # vi: ts=2 sw=2 et
