--- a/lib/core/workqueues/CMakeLists.txt
+++ b/lib/core/workqueues/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library_named(zephyr_core_workqueues)
+zephyr_library_named(cerebri_core_workqueues)
 
 
 # we need to be able to include generated header files
@@ -10,3 +10,5 @@ zephyr_include_directories()
 zephyr_library_sources(
   src/workq.c
   )
+
+add_dependencies(app cerebri_core_workqueues)
