--- a/lib/core/common/CMakeLists.txt
+++ b/lib/core/common/CMakeLists.txt
@@ -17,11 +17,9 @@ set(CASADI_FILES
   ${CASADI_DEST_DIR}/common.c
   )
 
-add_custom_command(
-  OUTPUT
-    ${CASADI_FILES}
-    COMMAND ${CYECCA_PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/src/casadi/common.py ${CASADI_DEST_DIR}
-  )
+add_custom_command(OUTPUT ${CASADI_DEST_DIR}/common.c
+  COMMAND ${CYECCA_PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/src/casadi/common.py ${CASADI_DEST_DIR}
+  DEPENDS cyecca_install)
 
 set_source_files_properties(
   ${CASADI_FILES}
