Fix for casadi.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/lib/core/common/CMakeLists.txt
+++ b/lib/core/common/CMakeLists.txt
@@ -18,8 +18,7 @@ set(CASADI_FILES
   )
 
 add_custom_command(OUTPUT ${CASADI_DEST_DIR}/common.c
-  COMMAND ${CYECCA_PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/src/casadi/common.py ${CASADI_DEST_DIR}
-  DEPENDS cyecca_install)
+  COMMAND ${CYECCA_PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/src/casadi/common.py ${CASADI_DEST_DIR})
 
 set_source_files_properties(
   ${CASADI_FILES}
