Improvements for control alloation.
Ensures moment command met before thrust command.

Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,10 @@ endif()
 set(CEREBRI_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(CYECCA_PYTHON  ${CEREBRI_ROOT_DIR}/scripts/cyecca_python)
 
-execute_process(COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/scripts/cyecca_install)
+execute_process(
+	COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/scripts/cyecca_install
+	COMMAND_ECHO STDOUT
+	)
 
 add_subdirectory(lib)
 
