Add cyecca_install to github workflow.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           west init -l .
           west update
+          ./scripts/cyecca_install.sh
 
       - name: Format Check
         working-directory: example-application
