Add adjust filter frequency.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -1,12 +1,12 @@
 CONFIG_SPEED_OPTIMIZATIONS=y
 CONFIG_SIZE_OPTIMIZATIONS=n
 
-CONFIG_TEST=y
-CONFIG_ASAN=y
-CONFIG_UBSAN=n
-CONFIG_ASSERT=y
-CONFIG_ASSERT_LEVEL=2
-CONFIG_ASSERT_VERBOSE=y
+#CONFIG_TEST=y
+#CONFIG_ASAN=y
+#CONFIG_UBSAN=n
+CONFIG_ASSERT=n
+#CONFIG_ASSERT_LEVEL=2
+#CONFIG_ASSERT_VERBOSE=y
 
 
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
@@ -22,15 +22,15 @@ CONFIG_FPU=y
 
 # gains
 CONFIG_CEREBRI_RDD2_THRUST_TRIM=21952
-CONFIG_CEREBRI_RDD2_THRUST_DELTA=19756
+CONFIG_CEREBRI_RDD2_THRUST_DELTA=21952
 
-CONFIG_CEREBRI_RDD2_ROLL_KP=0
-CONFIG_CEREBRI_RDD2_PITCH_KP=0
-CONFIG_CEREBRI_RDD2_YAW_KP=0
+CONFIG_CEREBRI_RDD2_ROLL_KP=2000
+CONFIG_CEREBRI_RDD2_PITCH_KP=2000
+CONFIG_CEREBRI_RDD2_YAW_KP=1000
 
 CONFIG_CEREBRI_RDD2_ROLLRATE_KP=300
 CONFIG_CEREBRI_RDD2_PITCHRATE_KP=300
-CONFIG_CEREBRI_RDD2_YAWRATE_KP=50
+CONFIG_CEREBRI_RDD2_YAWRATE_KP=300
 
 CONFIG_CEREBRI_RDD2_ROLLRATE_KI=0
 CONFIG_CEREBRI_RDD2_PITCHRATE_KI=0
@@ -91,7 +91,7 @@ CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MAX_0=2000
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_0=y
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_0=587
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_DIV_0=1000
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_0=1200
+CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_0=1100
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_DIV_0=1
 
 # ARM1
@@ -101,7 +101,7 @@ CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MAX_1=2000
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_1=y
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_1=587
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_DIV_1=1000
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_1=1200
+CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_1=1100
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_DIV_1=1
 
 # ARM2
@@ -111,7 +111,7 @@ CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MAX_2=2000
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_2=y
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_2=587
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_DIV_2=1000
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_2=1200
+CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_2=1100
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_DIV_2=1
 
 # ARM3
@@ -121,7 +121,7 @@ CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MAX_3=2000
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_3=y
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_3=587
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_DIV_3=1000
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_3=1200
+CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_3=1100
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_DIV_3=1
 
 CONFIG_CAN=y
