Fixes poll issue with b3rb command.
Signed-off-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/b3rb/boards/mr_canhubk3_s32k344.conf
+++ b/app/b3rb/boards/mr_canhubk3_s32k344.conf
@@ -22,15 +22,18 @@ CONFIG_FPU=y
 
 # config
 CONFIG_INPUT=y
+CONFIG_INPUT_GPIO_KEYS=y
+CONFIG_INPUT_SBUS=y
 CONFIG_INPUT_SBUS_THREAD_STACK_SIZE=8192
-CONFIG_INPUT_EVENT_DUMP=y
-CONFIG_INPUT_SHELL=y
-CONFIG_INPUT_MODE_SYNCHRONOUS=n
 CONFIG_INPUT_SBUS_REPORT_FILTER=0
+CONFIG_INPUT_EVENT_DUMP=n
+CONFIG_INPUT_SHELL=n
+CONFIG_INPUT_MODE_SYNCHRONOUS=n
 CONFIG_INPUT_THREAD_STACK_SIZE=2048
 
 CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=3
 
+CONFIG_CEREBRI_SENSE_SBUS=y
 CONFIG_CEREBRI_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_SAFETY=y
