--- a/app/b3rb/prj.conf
+++ b/app/b3rb/prj.conf
@@ -47,7 +47,7 @@ CONFIG_LOG_MODE_DEFERRED=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
 
 # modules
-CONFIG_SYNAPSE_PROTOBUF=y
+CONFIG_SYNAPSE_PB=y
 CONFIG_NANOPB=y
 CONFIG_UBXLIB=y
 
