--- a/lib/synapse/Kconfig
+++ b/lib/synapse/Kconfig
@@ -7,5 +7,6 @@ rsource "eth_tx/Kconfig"
 rsource "eth_rx/Kconfig"
 rsource "topic/Kconfig"
 rsource "vesc_can/Kconfig"
+rsource "log_sdcard/Kconfig"
 
 endmenu
