--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -33,6 +33,7 @@ CONFIG_CEREBRI_SENSE_UBX_GNSS=n
 CONFIG_CEREBRI_RDD2_ESTIMATE_ODOMETRY_ETHERNET=n
 CONFIG_CEREBRI_SYNAPSE_ETH_RX=y
 CONFIG_CEREBRI_SYNAPSE_ETH_TX=y
+CONFIG_CEREBRI_SYNAPSE_LOG_SDCARD=y
 
 CONFIG_CEREBRI_SYNAPSE_TOPIC=y
 CONFIG_CEREBRI_CORE_COMMON=y
@@ -45,10 +46,18 @@ CONFIG_LOG=y
 CONFIG_LOG_CMDS=y
 CONFIG_LOG_MODE_DEFERRED=y
 
+CONFIG_FILE_SYSTEM=y
+CONFIG_FAT_FILESYSTEM_ELM=y
+CONFIG_DISK_ACCESS=y
+CONFIG_FS_FATFS_EXFAT=y
+CONFIG_POSIX_FS=y
+CONFIG_DISK_DRIVER_SDMMC=y
+CONFIG_FS_FATFS_MOUNT_MKFS=y
+
 CONFIG_CBPRINTF_FP_SUPPORT=y
 
 # modules
-CONFIG_SYNAPSE_PROTOBUF=y
+CONFIG_SYNAPSE_PB=y
 CONFIG_NANOPB=y
 CONFIG_UBXLIB=y
 
