--- a/lib/actuate/vesc_can/CMakeLists.txt
+++ b/lib/actuate/vesc_can/CMakeLists.txt
@@ -12,4 +12,4 @@ zephyr_library_sources(
   actuator_vesc_can.c
   )
 
-add_dependencies(cerebri_actuate_vesc_can synapse_protobuf)
+add_dependencies(cerebri_actuate_vesc_can synapse_pb)
