--- a/lib/sense/wheel_odometry/Kconfig
+++ b/lib/sense/wheel_odometry/Kconfig
@@ -4,7 +4,7 @@ menuconfig CEREBRI_SENSE_WHEEL_ODOMETRY
   bool "Wheel Odometry"
   depends on ZROS
   depends on CEREBRI_CORE_COMMON
-  depends on SYNAPSE_PROTOBUF
+  depends on SYNAPSE_PB
   help
     This option enables the wheel odometry driver interface
 
