--- a/lib/synapse/CMakeLists.txt
+++ b/lib/synapse/CMakeLists.txt
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: Apache-2.0
 
+add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_LOG_SDCARD log_sdcard)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_ETH_TX eth_tx)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_ETH_RX eth_rx)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_TOPIC topic)
