--- a/west.yml
+++ b/west.yml
@@ -39,13 +39,13 @@ manifest:
       path: modules/lib/cyecca
     - name: synapse_pb
       remote: cognipilot
-      revision: c52b4869af9b7eb347df366a6b089e389a864aaf # main 7/16/24
+      revision: b68769c2f56ff2b3a8eaa6729cc68179f06a7503 # main 7/20/24
       path: modules/lib/synapse_pb
     - name: ubxlib
       remote: cognipilot
       path: modules/lib/ubxlib
-      revision: 9c485ed5ab663b96cae6199498356fd13ee35904 # b_mythical 04/12/24
+      revision: brave
     - name: hal_nxp
       remote: cognipilot
-      revision: a092d490a5bd7ed2db6fceb8c0b720cb4ead099a # pr-qtmr-pwm
+      revision: master
       path: modules/hal/nxp
