Work on new vector3_array message. Update for synapse_pb change.
Signed-off-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/b3rb/prj.conf
+++ b/app/b3rb/prj.conf
@@ -44,6 +44,14 @@ CONFIG_LOG=y
 CONFIG_LOG_CMDS=y
 CONFIG_LOG_MODE_DEFERRED=y
 
+CONFIG_FILE_SYSTEM=y
+CONFIG_FAT_FILESYSTEM_ELM=y
+CONFIG_DISK_ACCESS=y
+CONFIG_FS_FATFS_EXFAT=y
+CONFIG_POSIX_FS=y
+CONFIG_DISK_DRIVER_SDMMC=y
+CONFIG_FS_FATFS_MOUNT_MKFS=y
+
 CONFIG_CBPRINTF_FP_SUPPORT=y
 
 # modules
