--- a/lib/sense/Kconfig
+++ b/lib/sense/Kconfig
@@ -5,6 +5,7 @@ menu "Sense"
 
 rsource "baro/Kconfig"
 rsource "imu/Kconfig"
+rsource "accel/Kconfig"
 rsource "mag/Kconfig"
 rsource "power/Kconfig"
 rsource "safety/Kconfig"
