--- a/west.yml
+++ b/west.yml
@@ -39,7 +39,7 @@ manifest:
       path: modules/lib/cyecca
     - name: synapse_pb
       remote: cognipilot
-      revision: b68769c2f56ff2b3a8eaa6729cc68179f06a7503 # main 7/20/24
+      revision: dd1898f39c78743489ce16b68d4c7ad1c64516c2 # pr-fifo 7/23/24
       path: modules/lib/synapse_pb
     - name: ubxlib
       remote: cognipilot
