Set stream flags.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -46,6 +46,9 @@ CONFIG_LOG=y
 CONFIG_LOG_CMDS=y
 CONFIG_LOG_MODE_DEFERRED=y
 
+#CONFIG_SPI_RTIO=y
+#CONFIG_SENSOR_SHELL_STREAM=y
+
 CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
 CONFIG_DISK_ACCESS=y
