--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -12,10 +12,10 @@ CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
 CONFIG_STACK_CANARIES=y
 
-CONFIG_ISR_STACK_SIZE=2048
+CONFIG_ISR_STACK_SIZE=8192
 
-CONFIG_LOG_MODE_DEFERRED=n
-CONFIG_LOG_MODE_IMMEDIATE=y
+CONFIG_LOG_MODE_DEFERRED=y
+#CONFIG_LOG_MODE_IMMEDIATE=y
 
 CONFIG_FPU=y
 
@@ -66,8 +66,11 @@ CONFIG_INPUT_THREAD_STACK_SIZE=2048
 
 CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=4
 
+CONFIG_CEREBRI_SYNAPSE_LOG_SDCARD=n
+CONFIG_CEREBRI_SENSE_IMU=n
+CONFIG_CEREBRI_SENSE_ACCEL=y
+
 CONFIG_CEREBRI_SENSE_SBUS=y
-CONFIG_CEREBRI_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_SAFETY=y
 CONFIG_CEREBRI_SENSE_UBX_GNSS=y
