Set stream flags.
Signed-off-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -26,7 +26,7 @@ CONFIG_NET_PKT_RX_COUNT=24
 CONFIG_CEREBRI_SENSE_SBUS=y
 CONFIG_CEREBRI_SENSE_POWER=y
 CONFIG_CEREBRI_SENSE_SAFETY=n
-CONFIG_CEREBRI_SENSE_IMU=y
+CONFIG_CEREBRI_SENSE_IMU=n
 CONFIG_CEREBRI_SENSE_MAG=n
 CONFIG_CEREBRI_SENSE_UBX_GNSS=n
 
@@ -45,6 +45,14 @@ CONFIG_INIT_STACKS=y
 CONFIG_LOG=y
 CONFIG_LOG_CMDS=y
 CONFIG_LOG_MODE_DEFERRED=y
+
+CONFIG_SENSOR_SHELL_THREAD_STACK_SIZE=8192
+CONFIG_SENSOR_LOG_LEVEL_DBG=y
+CONFIG_RTIO_SUBMIT_SEM=n
+CONFIG_SPI_RTIO=y
+CONFIG_SPI_MCUX_LPSPI_DMA=n
+CONFIG_ICM42688_DECODER=y
+CONFIG_ICM42688_STREAM=y
 
 CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
