Add imu publication.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -50,6 +50,7 @@ CONFIG_SENSOR_SHELL_THREAD_STACK_SIZE=8192
 CONFIG_SENSOR_LOG_LEVEL_DBG=y
 CONFIG_RTIO_SUBMIT_SEM=n
 CONFIG_SPI_RTIO=y
+CONFIG_SPI_ASYNC=n
 CONFIG_SPI_MCUX_LPSPI_DMA=n
 CONFIG_ICM42688_DECODER=y
 CONFIG_ICM42688_STREAM=y
