Logging for imu.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -15,7 +15,7 @@ CONFIG_STACK_CANARIES=y
 CONFIG_ISR_STACK_SIZE=8192
 
 CONFIG_LOG_MODE_DEFERRED=y
-#CONFIG_LOG_MODE_IMMEDIATE=y
+CONFIG_LOG_MODE_IMMEDIATE=n
 
 CONFIG_FPU=y
 
