Work on logging rate.
Signed-off-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/lib/sense/Kconfig
+++ b/lib/sense/Kconfig
@@ -6,6 +6,7 @@ menu "Sense"
 rsource "baro/Kconfig"
 rsource "imu/Kconfig"
 rsource "accel/Kconfig"
+rsource "icm42688/Kconfig"
 rsource "mag/Kconfig"
 rsource "power/Kconfig"
 rsource "safety/Kconfig"
