--- a/zephyr/module.yml
+++ b/zephyr/module.yml
@@ -4,6 +4,10 @@
 build:
   kconfig: Kconfig
   cmake: .
+  settings:
+    dts_root: .
   depends:
     - nanopb
     - synapse_pb
+    - cmsis
+    - cmsis-dsp
