--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -7,6 +7,9 @@ CONFIG_ASSERT=y
 CONFIG_ASSERT_LEVEL=2
 CONFIG_ASSERT_VERBOSE=y
 
+CONFIG_CMSIS_DSP=y
+CONFIG_CMSIS_DSP_FILTERING=y
+
 
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
@@ -20,12 +23,16 @@ CONFIG_LOG_MODE_IMMEDIATE=n
 CONFIG_FPU=y
 
 # gains
-CONFIG_CEREBRI_RDD2_THRUST_TRIM=21952
-CONFIG_CEREBRI_RDD2_THRUST_DELTA=19756
+CONFIG_CEREBRI_RDD2_THRUST_TRIM=10976
+CONFIG_CEREBRI_RDD2_THRUST_DELTA=10976
 
 CONFIG_CEREBRI_RDD2_ROLL_KP=0
 CONFIG_CEREBRI_RDD2_PITCH_KP=0
 CONFIG_CEREBRI_RDD2_YAW_KP=0
+
+#CONFIG_CEREBRI_RDD2_ROLLRATE_KP=0
+#CONFIG_CEREBRI_RDD2_PITCHRATE_KP=0
+#CONFIG_CEREBRI_RDD2_YAWRATE_KP=0
 
 CONFIG_CEREBRI_RDD2_ROLLRATE_KP=300
 CONFIG_CEREBRI_RDD2_PITCHRATE_KP=300
@@ -40,20 +47,20 @@ CONFIG_CEREBRI_RDD2_PITCHRATE_IMAX=0
 CONFIG_CEREBRI_RDD2_YAWRATE_IMAX=0
 
 # RDD2 APPS
-CONFIG_CEREBRI_RDD2_ALLOCATION=n
-CONFIG_CEREBRI_RDD2_ANGULAR_VELOCITY=n
-CONFIG_CEREBRI_RDD2_ATTITUDE=n
-CONFIG_CEREBRI_RDD2_COMMAND=n
+CONFIG_CEREBRI_RDD2_ALLOCATION=y
+CONFIG_CEREBRI_RDD2_ANGULAR_VELOCITY=y
+CONFIG_CEREBRI_RDD2_ATTITUDE=y
+CONFIG_CEREBRI_RDD2_COMMAND=y
 CONFIG_CEREBRI_RDD2_ESTIMATE=y
 CONFIG_CEREBRI_RDD2_ESTIMATE_ODOMETRY_ETHERNET=n
-CONFIG_CEREBRI_RDD2_FSM=n
+CONFIG_CEREBRI_RDD2_FSM=y
 CONFIG_CEREBRI_RDD2_LIGHTING=n
-CONFIG_CEREBRI_RDD2_POSITION=n
+CONFIG_CEREBRI_RDD2_POSITION=y
 
 # disabled for first live flight
-CONFIG_CEREBRI_ACTUATE_PWM=n
+CONFIG_CEREBRI_ACTUATE_PWM=y
 CONFIG_CEREBRI_ACTUATE_PWM_SHELL=n
-CONFIG_CEREBRI_ACTUATE_SOUND=n
+CONFIG_CEREBRI_ACTUATE_SOUND=y
 
 # config
 CONFIG_INPUT=y
@@ -64,68 +71,26 @@ CONFIG_INPUT_MODE_SYNCHRONOUS=n
 CONFIG_INPUT_SBUS_REPORT_FILTER=0
 CONFIG_INPUT_THREAD_STACK_SIZE=2048
 
-CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=4
-
 CONFIG_CEREBRI_SYNAPSE_LOG_SDCARD=y
-CONFIG_CEREBRI_SENSE_IMU=n
-CONFIG_CEREBRI_SENSE_ACCEL=y
+CONFIG_CEREBRI_SENSE_IMU=y
+CONFIG_CEREBRI_SENSE_ACCEL=n
 CONFIG_CEREBRI_SENSE_ICM42688=n
 
-CONFIG_CEREBRI_SENSE_SBUS=n
-CONFIG_CEREBRI_SENSE_MAG=n
-CONFIG_CEREBRI_SENSE_SAFETY=n
-CONFIG_CEREBRI_SENSE_UBX_GNSS=n
+CONFIG_CEREBRI_SENSE_SBUS=y
+CONFIG_CEREBRI_SENSE_MAG=y
+CONFIG_CEREBRI_SENSE_SAFETY=y
+CONFIG_CEREBRI_SENSE_UBX_GNSS=y
 
-CONFIG_CEREBRI_SYNAPSE_ETH_RX=n
-CONFIG_CEREBRI_SYNAPSE_ETH_TX=n
-CONFIG_CEREBRI_ACTUATE_LED_ARRAY=n
-CONFIG_CEREBRI_SENSE_POWER=n
+CONFIG_CEREBRI_SYNAPSE_ETH_RX=y
+CONFIG_CEREBRI_SYNAPSE_ETH_TX=y
+CONFIG_CEREBRI_ACTUATE_LED_ARRAY=y
+CONFIG_CEREBRI_SENSE_POWER=y
 
 CONFIG_PWM=y
 
 CONFIG_LED_STRIP=y
 CONFIG_APA102_STRIP=y
 CONFIG_CEREBRI_SENSE_MAG_COUNT=2
-
-# ARM0
-CONFIG_CEREBRI_ACTUATE_PWM_INDEX_0=0
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MIN_0=1100
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MAX_0=2000
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_0=y
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_0=587
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_DIV_0=1000
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_0=1200
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_DIV_0=1
-
-# ARM1
-CONFIG_CEREBRI_ACTUATE_PWM_INDEX_1=1
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MIN_1=1100
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MAX_1=2000
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_1=y
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_1=587
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_DIV_1=1000
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_1=1200
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_DIV_1=1
-
-# ARM2
-CONFIG_CEREBRI_ACTUATE_PWM_INDEX_2=2
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MIN_2=1100
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MAX_2=2000
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_2=y
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_2=587
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_DIV_2=1000
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_2=1200
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_DIV_2=1
-
-# ARM3
-CONFIG_CEREBRI_ACTUATE_PWM_INDEX_3=3
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MIN_3=1100
-CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MAX_3=2000
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_3=y
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_3=587
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_DIV_3=1000
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_3=1200
-CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_DIV_3=1
 
 CONFIG_CAN=y
 CONFIG_CAN_MAX_FILTER=5
